--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/buonzz/pdfco-demo#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.2.0"
   }
 }
